fixed text alignment in messages

--- a/src/App.css
+++ b/src/App.css
@@ -168,7 +168,7 @@ p {
   border-radius: 35px;
   position: relative;
   color: #ffffff;
-  text-align: center;
+  text-align: initial;
 }
 
 .message {
